# real-estate-generator

./: .gitignore  GUIDE.MD  Makefile  QUICK_START.md  README.md  ROADMAP.md  UPCOMING_FEATURES.md  config.json  package.json  pyproject.toml  requirements.txt  site.py  site_no_deploy.py
listings/example-listing/: listing.json
static/: gallery-filter.js  lightbox.js  styles.css
templates/: listing.html
