[project]
name = "real-estate-generator"
version = "1.0.0"
description = "Professional real estate marketing video and website generator with AI-powered photo curation and video production capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ryan Pederson", email = "ryan@example.com"}
]
keywords = [
    "real-estate",
    "video-generation",
    "property-marketing",
    "website-generator",
    "virtual-tours",
    "ffmpeg",
    "image-processing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "jinja2>=3.1.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
video = [
    "opencv-python>=4.8.0",
    "moviepy>=1.0.3",
    "numpy>=1.24.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
]
cloud = [
    "boto3>=1.28.0",
    "requests>=2.31.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
all = [
    "opencv-python>=4.8.0",
    "moviepy>=1.0.3",
    "numpy>=1.24.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "boto3>=1.28.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
real-estate-generator = "site:main"
real-estate-wizard = "site:run_wizard"

[project.urls]
"Homepage" = "https://github.com/ryanpederson/real-estate-generator"
"Bug Tracker" = "https://github.com/ryanpederson/real-estate-generator/issues"
"Documentation" = "https://github.com/ryanpederson/real-estate-generator/blob/main/GUIDE.MD"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["templates", "static"]

[tool.setuptools.package-data]
templates = ["*.html"]
static = ["*.css", "*.js"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "B", "I", "N", "UP", "C90"]
ignore = ["E501"]
target-version = "py38"